--- a/enHueco/Layers/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Layers/Views/Base.lproj/Main.storyboard
@@ -184,23 +184,27 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="exL-fa-pGZ">
                                 <rect key="frame" x="191" y="231" width="218" height="50"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.63529411759999999" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="0KV-R4-YE6"/>
                                     <constraint firstAttribute="width" constant="218" id="a0o-BU-kEP"/>
                                 </constraints>
-                                <state key="normal" title="Take picture or select"/>
+                                <state key="normal" title="Take or select picture">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="importFromLocalStorageButtonPressed:" destination="0sF-PD-r5U" eventType="touchUpInside" id="TRD-rJ-VEY"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jk8-Tc-XLd">
                                 <rect key="frame" x="191" y="318" width="218" height="50"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.63529411759999999" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="218" id="3r9-Gq-tHc"/>
                                 </constraints>
-                                <state key="normal" title="Import from Facebook"/>
+                                <state key="normal" title="Import from Facebook">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
                                     <action selector="importFromFacebookButtonPressed:" destination="0sF-PD-r5U" eventType="touchUpInside" id="sJm-xe-kXA"/>
                                 </connections>
@@ -212,20 +216,20 @@
                                     <constraint firstAttribute="width" constant="69" id="WcN-gg-0Fx"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v8w-rO-R5z">
                                 <rect key="frame" x="277" y="545" width="48" height="30"/>
                                 <state key="normal" title="Cancel">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="cancelButtonPressed:" destination="0sF-PD-r5U" eventType="touchUpInside" id="txC-CH-ab8"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.45277691685955818" green="0.76079010391845348" blue="0.88334424083769636" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="exL-fa-pGZ" firstAttribute="centerX" secondItem="mL9-if-FqX" secondAttribute="centerX" id="09v-iI-ATT"/>
                             <constraint firstItem="jk8-Tc-XLd" firstAttribute="centerX" secondItem="mL9-if-FqX" secondAttribute="centerX" id="Ahu-lm-73E"/>
@@ -2685,13 +2689,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="B9a-uk-LAQ">
-                                <rect key="frame" x="213" y="475" width="175" height="42"/>
+                                <rect key="frame" x="213" y="469" width="175" height="48"/>
                                 <color key="backgroundColor" red="0.0" green="0.63529411764705879" blue="0.52549019607843139" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="175" id="bZG-Bu-cr7">
                                         <variation key="heightClass=regular-widthClass=compact" constant="144"/>
                                     </constraint>
-                                    <constraint firstAttribute="height" constant="42" id="cq9-rP-pYL">
+                                    <constraint firstAttribute="height" constant="48" id="cq9-rP-pYL">
                                         <variation key="heightClass=regular-widthClass=compact" constant="45"/>
                                     </constraint>
                                 </constraints>
@@ -2718,8 +2722,8 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="d.montoya10" borderStyle="roundedRect" placeholder="login" textAlignment="center" minimumFontSize="18" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dKZ-Cl-i2z">
-                                <rect key="frame" x="146" y="291" width="309" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="146" y="285" width="309" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" priority="800" constant="309" id="SPX-2B-TYd"/>
                                     <constraint firstAttribute="width" relation="lessThanOrEqual" constant="310" id="V6C-WO-xYW"/>
@@ -2740,8 +2744,8 @@
                                 </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="test" borderStyle="roundedRect" placeholder="contraseña" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vcH-iL-dbG">
-                                <rect key="frame" x="146" y="329" width="309" height="30"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <rect key="frame" x="146" y="323" width="309" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="f91-Ql-0uz">
                                         <variation key="heightClass=regular-widthClass=compact" constant="30"/>
@@ -2767,16 +2771,16 @@
                                 <color key="textColor" red="0.32602290783898302" green="0.32602290783898302" blue="0.32602290783898302" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bzx-Bu-NVk">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bzx-Bu-NVk">
                                 <rect key="frame" x="0.0" y="20" width="600" height="50"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" id="Ecd-xK-UGF"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5jV-tn-yKL">
                                 <rect key="frame" x="0.0" y="233" width="600" height="50"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </view>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="EnHuecoLogo" translatesAutoresizingMaskIntoConstraints="NO" id="whz-SN-dvL">
                                 <rect key="frame" x="244" y="78" width="112" height="110"/>
@@ -2840,6 +2844,7 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Login" id="Yas-Uc-AF7"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="loginButton" destination="B9a-uk-LAQ" id="lfH-IK-l6s"/>
