--- a/enHueco/Layers/Views/Base.lproj/Main.storyboard
+++ b/enHueco/Layers/Views/Base.lproj/Main.storyboard
@@ -615,43 +615,57 @@
                                         </constraints>
                                         <textInputTraits key="textInputTraits"/>
                                     </searchBar>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="i1I-ga-Uv5">
-                                        <rect key="frame" x="0.0" y="55" width="600" height="32"/>
+                                    <collectionView multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="i1I-ga-Uv5">
+                                        <rect key="frame" x="8" y="55" width="584" height="32"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="32" id="Sy7-he-vH9"/>
                                         </constraints>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="8Rk-8X-TaW">
-                                            <size key="itemSize" width="184" height="29"/>
+                                            <size key="itemSize" width="279" height="29"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                            <inset key="sectionInset" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
                                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" reuseIdentifier="CommonFreeTimePeriodsSelectedFriendsCollectionViewCell" id="i78-2U-6Zg" customClass="CommonFreeTimePeriodsSelectedFriendsCollectionViewCell" customModule="enHueco" customModuleProvider="target">
-                                                <rect key="frame" x="10" y="2" width="184" height="29"/>
+                                                <rect key="frame" x="0.0" y="2" width="279" height="29"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                                    <rect key="frame" x="0.0" y="0.0" width="184" height="29"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="279" height="29"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pepito Alberto Perez" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Xc-k2-gHS">
-                                                            <rect key="frame" x="8" y="4" width="168" height="21"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="755" text="Pepito Alberto Perez" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Xc-k2-gHS">
+                                                            <rect key="frame" x="13" y="8" width="233" height="13"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
+                                                        <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FQJ-xM-5cC">
+                                                            <rect key="frame" x="259" y="1" width="20" height="28"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="20" id="rSu-tu-9SD"/>
+                                                            </constraints>
+                                                            <state key="normal" title="x">
+                                                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            </state>
+                                                        </button>
                                                     </subviews>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                                 </view>
                                                 <color key="backgroundColor" red="0.33111327585059647" green="0.48627012032068523" blue="0.83931107949999995" alpha="0.92390730570000001" colorSpace="calibratedRGB"/>
                                                 <constraints>
-                                                    <constraint firstItem="1Xc-k2-gHS" firstAttribute="top" secondItem="i78-2U-6Zg" secondAttribute="topMargin" constant="-4" id="Ely-04-2fB"/>
-                                                    <constraint firstItem="1Xc-k2-gHS" firstAttribute="trailing" secondItem="i78-2U-6Zg" secondAttribute="trailingMargin" id="VRb-oE-hSS"/>
-                                                    <constraint firstAttribute="bottomMargin" secondItem="1Xc-k2-gHS" secondAttribute="bottom" constant="-4" id="XyI-hD-C9e"/>
-                                                    <constraint firstItem="1Xc-k2-gHS" firstAttribute="leading" secondItem="i78-2U-6Zg" secondAttribute="leadingMargin" id="hKO-tr-IfX"/>
+                                                    <constraint firstAttribute="bottomMargin" secondItem="1Xc-k2-gHS" secondAttribute="bottom" id="1hN-73-FcI"/>
+                                                    <constraint firstAttribute="trailing" secondItem="FQJ-xM-5cC" secondAttribute="trailing" id="TD9-bV-OTq"/>
+                                                    <constraint firstItem="FQJ-xM-5cC" firstAttribute="leading" secondItem="1Xc-k2-gHS" secondAttribute="trailing" constant="13" id="WDv-UK-GD2"/>
+                                                    <constraint firstItem="FQJ-xM-5cC" firstAttribute="centerY" secondItem="i78-2U-6Zg" secondAttribute="centerY" id="aTB-ui-jbN"/>
+                                                    <constraint firstItem="1Xc-k2-gHS" firstAttribute="leading" secondItem="i78-2U-6Zg" secondAttribute="leadingMargin" constant="5" id="qLf-96-ucG"/>
+                                                    <constraint firstItem="1Xc-k2-gHS" firstAttribute="top" secondItem="i78-2U-6Zg" secondAttribute="topMargin" id="uKI-nB-cY8"/>
+                                                    <constraint firstItem="FQJ-xM-5cC" firstAttribute="leading" secondItem="1Xc-k2-gHS" secondAttribute="trailing" constant="13" id="yBP-ec-bcO"/>
                                                 </constraints>
                                                 <connections>
+                                                    <outlet property="deleteButton" destination="FQJ-xM-5cC" id="AvY-sx-yi0"/>
+                                                    <outlet property="deleteButtonWidthConstraint" destination="rSu-tu-9SD" id="PkW-hC-xHA"/>
                                                     <outlet property="friendNameLabel" destination="1Xc-k2-gHS" id="Njc-r2-kxR"/>
                                                 </connections>
                                             </collectionViewCell>
@@ -661,8 +675,8 @@
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="tBk-DO-eg0" firstAttribute="top" secondItem="NFn-jL-nnG" secondAttribute="top" constant="4" id="bFa-HP-9A7"/>
-                                    <constraint firstItem="i1I-ga-Uv5" firstAttribute="leading" secondItem="NFn-jL-nnG" secondAttribute="leading" id="gEi-q7-vLC"/>
-                                    <constraint firstAttribute="trailing" secondItem="i1I-ga-Uv5" secondAttribute="trailing" id="hrB-hh-j4y"/>
+                                    <constraint firstItem="i1I-ga-Uv5" firstAttribute="leading" secondItem="NFn-jL-nnG" secondAttribute="leading" constant="8" id="gEi-q7-vLC"/>
+                                    <constraint firstAttribute="trailing" secondItem="i1I-ga-Uv5" secondAttribute="trailing" constant="8" id="hrB-hh-j4y"/>
                                     <constraint firstItem="tBk-DO-eg0" firstAttribute="leading" secondItem="NFn-jL-nnG" secondAttribute="leading" id="tNc-xr-jkD"/>
                                     <constraint firstAttribute="height" constant="95" id="u7F-oP-gs7"/>
                                     <constraint firstAttribute="bottom" secondItem="i1I-ga-Uv5" secondAttribute="bottom" constant="8" id="y3h-hZ-6it">
@@ -672,7 +686,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.63425268310000005" blue="0.52588851120000002" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="afz-ut-9tf" secondAttribute="trailing" id="0V7-Pt-aAf"/>
                             <constraint firstItem="XAq-bZ-sVd" firstAttribute="top" secondItem="afz-ut-9tf" secondAttribute="bottom" id="NO5-a5-46C"/>
